--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <title>Document</title>
     </head>
     <body>
-      <div>안뇽안뇽앙ㄴ뇽안용안뇽안뇽안뇽</div>
+      <div>안녕하세요 GIt 실습 시작</div>
+       <div> git branch
+        git checkout testa -> 왼쪽 하단 testa로 변경됨(branch가 merge가 되어있는 상태에서만 가능)</div>
+      
     </body>
 </html>
